--- a/emofunk.html
+++ b/emofunk.html
@@ -294,7 +294,7 @@
 	<a href="http://seanave.tumblr.com/"><img id="tumblr" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/tumblr_icon.png" onmouseover="tumblr"></a> 
 	<a href="https://soundcloud.com/sean_avery"><img id="soundcloud" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/soundcloud_icon.png" onmouseover="soundcloud"></a> 
 
-	<h1 align="center" >EMOFUNK</h1>
+	<!-- <h1 align="center" >EMOFUNK</h1> -->
 
 	 
 
