Changing the way the buttons work

--- a/emofunk.html
+++ b/emofunk.html
@@ -169,7 +169,8 @@
    		{
    			setTimeout(function(){
    				document.getElementById("video").style.display = "none";
-   				document.getElementById("download").style.display = "block";
+   				document.getElementById("download").style.display = "inline";
+   				document.getElementById("playButton").style.display = "inline";
    				splitMindReverse();
    			}, 1500);
 
