--- a/emofunk.html
+++ b/emofunk.html
@@ -114,7 +114,7 @@
 		{
 			element.parentNode.removeChild(element);
 		}
-		var elementPlay = document.getElementById("download");
+		var elementPlay = document.getElementById("play");
 		if(element != null)
 		{
 			element.parentNode.removeChild(elementPlay);
