--- a/emofunk.html
+++ b/emofunk.html
@@ -115,7 +115,7 @@
 			element.parentNode.removeChild(element);
 		}
 		var elementPlay = document.getElementById("play");
-		if(element != null)
+		if(elementPlay != null)
 		{
 			element.parentNode.removeChild(elementPlay);
 		}
