And another one

--- a/emofunk.html
+++ b/emofunk.html
@@ -32,9 +32,9 @@
 			element.parentNode.removeChild(element);
 		}
 		var elementDownload = document.getElementById("download");
-		if(element != null)
+		if(elementDownload != null)
 		{
-			element.parentNode.removeChild(elementDownload);
+			elementDownload.parentNode.removeChild(elementDownload);
 		}
 		/*if(increment == 20)
 		{
@@ -117,7 +117,7 @@
 		var elementPlay = document.getElementById("play");
 		if(elementPlay != null)
 		{
-			element.parentNode.removeChild(elementPlay);
+			elementPlay.parentNode.removeChild(elementPlay);
 		}
 
 		increment++;
