--- a/emofunk.html
+++ b/emofunk.html
@@ -181,7 +181,7 @@
    			setTimeout(function(){
    				document.getElementById("video").style.display = "none";
    				document.getElementById("download").style.display = "inline";
-   				document.getElementById("playButton").style.display = "inline";
+   				document.getElementById("play").style.display = "inline";
    				splitMindReverse();
    			}, 1500);
 
