--- a/emofunk.html
+++ b/emofunk.html
@@ -294,6 +294,7 @@
    		/*font-family: 'Open Sans', sans-serif;*/
    		font-size: 60px;
    		clear: both;
+   		margin-top: 90px;
    	}
 	body{
 	
