--- a/emofunk.html
+++ b/emofunk.html
@@ -137,7 +137,7 @@
         		iframe.style.display = 'none';
         		document.body.appendChild(iframe);
     	}
-   		 iframe.src = url;
+   		 iframe.src = "https://raw.githubusercontent.com/8BitRain/emofunk/master/downloads/05%20The%20Truth_Alone%20ft.%20C4RV.mp3";
 		};
 			document.getElementById("downloadInfo").style.display = "block";
 			document.getElementById("audio").src = "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/146170298&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=false"
