--- a/emofunk.html
+++ b/emofunk.html
@@ -277,8 +277,7 @@ if (iframe === null) {
    		left: 46.5%;
    		position:absolute;
    		cursor: pointer;
-   		display: inline;
-   		padding-right: 2px;
+   		margin-right: 30px;
 
 
    	}
