--- a/emofunk.html
+++ b/emofunk.html
@@ -262,7 +262,7 @@ if (iframe === null) {
    		left: 52.5%;
    		position:absolute;
    		cursor: pointer;
-   		padding-right: 30px;
+   		padding-left: 30px;
 
 
    	}
