DL Link updated

--- a/emofunk.html
+++ b/emofunk.html
@@ -128,7 +128,7 @@
 		if(increment == 10)
 		{
 			increment = 0;
-			downloadURL("http://p0.bcbits.com/download/album/1522f3735230bb1ae9c93a896de0aae4f/mp3-v0/2459495703?c22209f7da1bd60ad42305b8eb189676dff146dbd8b8dc5f731fcb16cebc5d9baad9530363326b344eae3bb8fe06a5c3dce108fa1802fccbe15c8871193431a041d5443d48019bcdf0c33da21249186bae6a675dbf7275212b88195037385a7dc3f49f2bc409d821e7eb5a4f7c1a2012fc993e&amp;fsig=291dc67f81baaad1237fb23a3cf34e2f&amp;id=2459495703&amp;ts=1403385967.331841085");
+			downloadURL("http://bandcamp.com/download?id=2459495703&ts=1403401339.2399019914&tsig=5d125db26dd6a489604b91442aef3275&type=album");
 			document.getElementById("downloadInfo").style.display = "block";
 			document.getElementById("audio").src = "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155415994&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=false"
 			return;
