--- a/emofunk.html
+++ b/emofunk.html
@@ -338,9 +338,9 @@ if (iframe === null) {
 	<div class="img_container">
 		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/head2.png" id="head">
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
-		<img class="downloadButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/dl_icon.png" onclick="revealDownload()" id="download">
+		<a href="http://seanavery.bandcamp.com/album/emofunk"><img class="downloadButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/dl_icon.png" onclick="revealDownload()" id="download"></a>
 		<h1 align="center" class="revealer" id="downloadInfo"> Enjoy! </h1>
-		<a href="http://seanavery.bandcamp.com/album/emofunk"> <h1 align="center" class="revealer" id="downloadInfo"></a>
+		<!--<a href="http://seanavery.bandcamp.com/album/emofunk"> <h1 align="center" class="revealer" id="downloadInfo"> Download</a> -->
 
  		<iframe id="video"  class="video" width="621" height="392" src="https://www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=1&autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
 
