--- a/emofunk.html
+++ b/emofunk.html
@@ -294,6 +294,17 @@ if (iframe === null) {
 
    	.bandcamp{
    		display: none;
+   		   		margin-left: auto;
+   		margin-right: auto;
+   		position: absolute;
+   		/* Firefox */
+		left: -moz-calc(50% - 475px);
+		/* WebKit */
+		left: -webkit-calc(50% - 475px);
+		/* Opera */
+		left: -o-calc(50% - 475px);
+		/* Standard */
+		left: calc(50% - 475px);
    	}
 
 	
