--- a/emofunk.html
+++ b/emofunk.html
@@ -298,13 +298,13 @@ if (iframe === null) {
    		margin-right: auto;
    		position: absolute;
    		/* Firefox */
-		left: -moz-calc(50% - 475px);
+		left: -moz-calc(50% - 350px);
 		/* WebKit */
-		left: -webkit-calc(50% - 475px);
+		left: -webkit-calc(50% - 350px);
 		/* Opera */
-		left: -o-calc(50% - 475px);
+		left: -o-calc(50% - 350px);
 		/* Standard */
-		left: calc(50% - 475px);
+		left: calc(50% - 350px);
    	}
 
 	
@@ -356,7 +356,7 @@ if (iframe === null) {
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
 		<img class="downloadButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/dl_icon.png" onclick="revealDownload()" id="download">
 
-		<iframe id="bandcamp" class="bandcamp" style="border: 0; width: 950px; height: 400px;" src="http://bandcamp.com/EmbeddedPlayer/album=2459495703/size=large/bgcol=ffffff/linkcol=63b2cc/artwork=none/transparent=true/" seamless><a href="http://seanavery.bandcamp.com/album/emofunk">EMOFUNK by Sean Avery</a></iframe>
+		<iframe class="bandcamp" id="bandcamp" style="border: 0; width: 700px; height: 400px;" src="http://bandcamp.com/EmbeddedPlayer/album=2459495703/size=large/bgcol=ffffff/linkcol=63b2cc/artwork=none/transparent=true/" seamless><a href="http://seanavery.bandcamp.com/album/emofunk">EMOFUNK by Sean Avery</a></iframe>
 
 		<h1 align="center" class="revealer" id="downloadInfo"> Enjoy! </h1>
 		<!--<a href="http://seanavery.bandcamp.com/album/emofunk"> <h1 align="center" class="revealer" id="downloadInfo"> Download</a> -->
