--- a/emofunk.html
+++ b/emofunk.html
@@ -128,8 +128,8 @@
 		if(increment == 10)
 		{
 			increment = 0;
-			downloadURL("http://bandcamp.com/download?id=2459495703&ts=1403401339.2399019914&tsig=5d125db26dd6a489604b91442aef3275&type=album");
-			document.getElementById("downloadInfo").style.display = "block";
+			//downloadURL("http://bandcamp.com/download?id=2459495703&ts=1403401339.2399019914&tsig=5d125db26dd6a489604b91442aef3275&type=album");
+			//document.getElementById("downloadInfo").style.display = "block";
 			document.getElementById("bandcamp").style.display = "block";
 			//document.getElementById("audio").src = "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155415994&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=false"
 			return;
