--- a/emofunk.html
+++ b/emofunk.html
@@ -296,7 +296,7 @@ if (iframe === null) {
    		display: none;
    		   		margin-left: auto;
    		margin-right: auto;
-   		position: relative;
+   		position: absolute;
    		/* Firefox */
 		left: -moz-calc(50% - 350px);
 		/* WebKit */
@@ -356,9 +356,6 @@ if (iframe === null) {
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
 		<img class="downloadButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/dl_icon.png" onclick="revealDownload()" id="download">
 
-		<iframe class="bandcamp" id="bandcamp" style="border: 0; width: 700px; height: 406px;" src="http://bandcamp.com/EmbeddedPlayer/album=2459495703/size=large/bgcol=ffffff/linkcol=0687f5/artwork=none/transparent=true/" seamless><a href="http://seanavery.bandcamp.com/album/emofunk">EMOFUNK by Sean Avery</a></iframe> 
-
-
 
 		<h1 align="center" class="revealer" id="downloadInfo"> Enjoy! </h1>
 		<!--<a href="http://seanavery.bandcamp.com/album/emofunk"> <h1 align="center" class="revealer" id="downloadInfo"> Download</a> -->
@@ -371,6 +368,8 @@ if (iframe === null) {
  		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png" id="body">
 
  	</div>
+
+	<iframe class="bandcamp" id="bandcamp" style="border: 0; width: 700px; height: 406px;" src="http://bandcamp.com/EmbeddedPlayer/album=2459495703/size=large/bgcol=ffffff/linkcol=0687f5/artwork=none/transparent=true/" seamless><a href="http://seanavery.bandcamp.com/album/emofunk">EMOFUNK by Sean Avery</a></iframe> -->
 
 
 	
