--- a/emofunk.html
+++ b/emofunk.html
@@ -220,7 +220,7 @@ if (iframe === null) {
     	margin-left: auto;
    		margin-right: auto;
    		position: relative;
-   		top: 50px;
+   		top: 70px;
 
 
    		opacity: .4;	
@@ -361,7 +361,7 @@ if (iframe === null) {
 		<img class="downloadButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/dl_icon.png" onclick="revealDownload()" id="download">
 
 		<div class="bandcamp_container">
-			<iframe class="bandcamp" id="bandcamp" style="border: 0; width: 700px; height: 406px; overflow:auto;" src="http://bandcamp.com/EmbeddedPlayer/album=2459495703/size=large/bgcol=ffffff/linkcol=0687f5/artwork=none/transparent=true/" seamless><a href="http://seanavery.bandcamp.com/album/emofunk">EMOFUNK by Sean Avery</a></iframe> -->
+			<iframe class="bandcamp" id="bandcamp" style="border: 0; width: 700px; height: 406px; overflow:visible;" src="http://bandcamp.com/EmbeddedPlayer/album=2459495703/size=large/bgcol=ffffff/linkcol=0687f5/artwork=none/transparent=true/" seamless><a href="http://seanavery.bandcamp.com/album/emofunk">EMOFUNK by Sean Avery</a></iframe> -->
 		</div>
 
 
