--- a/emofunk.html
+++ b/emofunk.html
@@ -305,6 +305,7 @@ if (iframe === null) {
 		left: -o-calc(50% - 350px);
 		/* Standard */
 		left: calc(50% - 350px);
+		overflow: visible;
    	}
 
    	.bandcamp_container{
@@ -361,7 +362,7 @@ if (iframe === null) {
 		<img class="downloadButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/dl_icon.png" onclick="revealDownload()" id="download">
 
 		<div class="bandcamp_container">
-			<iframe class="bandcamp" id="bandcamp" style="border: 0; width: 700px; height: 406px; overflow:visible;" src="http://bandcamp.com/EmbeddedPlayer/album=2459495703/size=large/bgcol=ffffff/linkcol=0687f5/artwork=none/transparent=true/" seamless><a href="http://seanavery.bandcamp.com/album/emofunk">EMOFUNK by Sean Avery</a></iframe> -->
+			<iframe class="bandcamp" id="bandcamp" style="border: 0; width: 700px; height: 406px;" src="http://bandcamp.com/EmbeddedPlayer/album=2459495703/size=large/bgcol=ffffff/linkcol=0687f5/artwork=none/transparent=true/" seamless><a href="http://seanavery.bandcamp.com/album/emofunk">EMOFUNK by Sean Avery</a></iframe> -->
 		</div>
 
 
