--- a/emofunk.html
+++ b/emofunk.html
@@ -314,7 +314,7 @@ if (iframe === null) {
 
 	
    	h1{
-   		color: white;
+   		color: gray;
    		font-family: 'Lato', sans-serif;
    		/*font-family: 'Open Sans', sans-serif;*/
    		font-size: 60px;
@@ -351,7 +351,7 @@ if (iframe === null) {
 	<a href="http://seanave.tumblr.com/"><img id="tumblr" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/tumblr_icon.png" onmouseover="tumblr"></a> 
 	<a href="https://soundcloud.com/sean_avery"><img id="soundcloud" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/soundcloud_icon.png" onmouseover="soundcloud"></a> 
 
-	<h1> align="center" >EMOFUNK</h1>
+	<h1 align="center" >EMOFUNK</h1>
 	<br> </br>
 
 	 
